иcпрвил степ у магов - сдклал корректное лечение и воскрешение, добавил обработку target is null, приложение больше не падает